--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,15 @@
 
         <dependency>
             <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-client</artifactId>
+            <version>0.8.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-testing</artifactId>
             <version>0.8.4</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
